--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ keycloakCoreVersion=26.0.0
 mockitoCoreVersion=5.12.0
 keycloakTestcontainersVersion=3.5.1
 jsonWebTokenVersion=0.9.1
+commonDto=1.0-SNAPSHOT
+mockServer=5.15.0
